[package]
name = "pct-str"
version = "2.0.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["web-programming", "encoding"]
keywords = ["percent", "percent-encoded", "encode", "decode", "string"]
description = "Percent-encoded strings for URL, URI, IRI, etc."
repository = "https://github.com/timothee-haudebourg/pct-str"
documentation = "https://docs.rs/pct-str"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = [ "std" ]
std = [ "thiserror", "utf8-decode/std" ]
no_std = [ "utf8-decode/no_std", "no_std_io" ]

[dependencies]
cfg-if = "1.0"
utf8-decode = { path = "../utf8-decode", optional = true, default-features = false }
thiserror = { version = "1.0.40", optional = true }
no_std_io = { version = "0.6.0", optional = true }